--- a/eslint-report/index.html
+++ b/eslint-report/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="English">
     <head>
         <meta charset="UTF-8">
         <title>ESLint Report</title>
@@ -44,7 +44,7 @@
                 cursor: pointer;
             }
 
-            td.clr-1,
+            /*td.clr-1,*/
             td.clr-2,
             th span {
                 font-weight: 700;
@@ -70,14 +70,14 @@
                 color: #9da0a4;
             }
 
-            #overview.bg-0,
+            /*#overview.bg-0,*/
             tr.bg-0 th {
                 color: #468847;
                 background: #dff0d8;
                 border-bottom: 1px solid #d6e9c6;
             }
 
-            #overview.bg-1,
+            /*#overview.bg-1,*/
             tr.bg-1 th {
                 color: #f0ad4e;
                 background: #fcf8e3;
@@ -95,9 +95,9 @@
                 border-bottom: 1px solid #ddd;
             }
 
-            td.clr-1 {
+            /*td.clr-1 {
                 color: #f0ad4e;
-            }
+            }*/
 
             td.clr-2 {
                 color: #b94a48;
