--- a/app/html/index.html
+++ b/app/html/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Página Inicial</title>
+    <title>Agendamento de Salas - Colégio Politécnico</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<h1>Página inicial</h1>
+<header>
+    <h1>Sistema de Agendamento de Salas</h1>
+    <nav>
+        Agendar Salas
+        Verificar Agendamentos (listar salas agendadas?)
+    </nav>
+</header>
 
-<p>Uma pizza pra você!</p>
 
-<img src="../images/pizza.jpg" alt="foto de uma pizza"/>
+
 
 <br/>
 
