--- a/app/html/agendamentos.html
+++ b/app/html/agendamentos.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UFSM - Novo Agendamento</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <header class="ufsm-header">
+        <div class="header-content">
+            <div class="brand">
+                <i class="fas fa-university fa-lg"></i> Gestão de Salas
+            </div>
+            <nav class="ufsm-nav">
+                <a href="index.html"><i class="fas fa-home"></i> Início</a>
+                <a href="salas.html"><i class="fas fa-chalkboard-teacher"></i> Salas</a>
+                <a href="agendamentos.html" class="active"><i class="fas fa-calendar-alt"></i> Agendamentos</a>
+            </nav>
+        </div>
+    </header>
 
+    <main class="main-content">
+        <div class="container">
+            <div class="card-panel">
+                <h1><i class="fas fa-calendar-check"></i> Reservar Sala</h1>
+
+                <form id="form-agendamento">
+                    <input type="hidden" id="editId">
+
+                    <div class="form-group">
+                        <label>Escolha a Sala</label>
+                        <select id="salaSelect" required>
+                            <option value="" disabled selected>Carregando salas...</option>
+                        </select>
+                    </div>
+
+                    <div class="flex-row">
+                        <div class="flex-col form-group">
+                            <label>Início da Reserva</label>
+                            <input type="datetime-local" id="dataHoraInicial" required>
+                        </div>
+                        <div class="flex-col form-group">
+                            <label>Fim da Reserva</label>
+                            <input type="datetime-local" id="dataHoraFinal" required>
+                        </div>
+                    </div>
+
+                    <div class="flex-row">
+                         <div class="flex-col form-group">
+                            <label>Nome do Responsável</label>
+                            <input type="text" id="nomeResponsavel" placeholder="Ex: Prof. Silva" required>
+                        </div>
+                        <div class="flex-col form-group">
+                            <label>CPF</label>
+                            <input type="text" id="cpf" placeholder="000.000.000-00" required>
+                        </div>
+                    </div>
+
+                    <button type="submit" style="width: 100%; margin-top: 10px;">
+                        <i class="fas fa-check"></i> Confirmar Agendamento
+                    </button>
+                </form>
+
+                <h2 style="border-top: 1px solid #eee; padding-top: 30px;">
+                    <i class="fas fa-history"></i> Reservas Ativas
+                </h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Sala</th>
+                            <th>Reserva</th>
+                            <th>Responsável</th>
+                            <th style="text-align: center;">Ação</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        </tbody>
+                </table>
+            </div>
+        </div>
+    </main>
+
+    <script src="../js/agendamentos-core.js"></script>
+    <script src="../js/agendamentos-view.js"></script>
 </body>
 </html>
