--- a/app/html/index.html
+++ b/app/html/index.html
@@ -12,7 +12,7 @@
     <header class="ufsm-header">
         <div class="header-content">
             <div class="brand">
-                <i class="fas fa-university fa-lg"></i>
+                <img src="../images/brasao.svg" alt="Brasão UFSM" class="ufsm-logo">
                 Gestão de Salas
             </div>
             <nav class="ufsm-nav">
