--- a/app/html/salas.html
+++ b/app/html/salas.html
@@ -11,7 +11,8 @@
     <header class="ufsm-header">
         <div class="header-content">
             <div class="brand">
-                <i class="fas fa-university fa-lg"></i> Gestão de Salas
+                <img src="../images/brasao.svg" alt="Brasão UFSM" class="ufsm-logo">
+                Gestão de Salas
             </div>
             <nav class="ufsm-nav">
                 <a href="index.html"><i class="fas fa-home"></i> Início</a>
